min height for landing images to avoid content jump

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -233,6 +233,7 @@ body .nl-page {
 
     .landing-image {
       position: relative;
+      min-height: 65vh;
 
       .rise-icon {
         position: absolute;
